ports/stm32/err.log
In file included from boards/STM32F3DISC/stm32f3xx_hal_conf.h:231:0,
                 from ../../lib/stm32lib/STM32F3xx_HAL_Driver/Inc/stm32f3xx_hal.h:46,
                 from ./mpconfigboard_common.h:30,
                 from ./mpconfigport.h:32,
                 from ../../py/mpconfig.h:62,
                 from flash.c:27:
flash.c: In function 'flash_erase':
flash.c:196:45: error: 'FLASH_FLAG_OPERR' undeclared (first use in this function)
     __HAL_FLASH_CLEAR_FLAG(FLASH_FLAG_EOP | FLASH_FLAG_OPERR | FLASH_FLAG_WRPERR |
                                             ^
../../lib/stm32lib/STM32F3xx_HAL_Driver/Inc/stm32f3xx_hal_flash.h:309:60: note: in definition of macro '__HAL_FLASH_CLEAR_FLAG'
 #define __HAL_FLASH_CLEAR_FLAG(__FLAG__)   ((FLASH->SR) = (__FLAG__))
                                                            ^
flash.c:196:45: note: each undeclared identifier is reported only once for each function it appears in
     __HAL_FLASH_CLEAR_FLAG(FLASH_FLAG_EOP | FLASH_FLAG_OPERR | FLASH_FLAG_WRPERR |
                                             ^
../../lib/stm32lib/STM32F3xx_HAL_Driver/Inc/stm32f3xx_hal_flash.h:309:60: note: in definition of macro '__HAL_FLASH_CLEAR_FLAG'
 #define __HAL_FLASH_CLEAR_FLAG(__FLAG__)   ((FLASH->SR) = (__FLAG__))
                                                            ^
flash.c:197:28: error: 'FLASH_FLAG_PGAERR' undeclared (first use in this function)
                            FLASH_FLAG_PGAERR | FLASH_FLAG_PGPERR | FLASH_FLAG_PGSERR);
                            ^
../../lib/stm32lib/STM32F3xx_HAL_Driver/Inc/stm32f3xx_hal_flash.h:309:60: note: in definition of macro '__HAL_FLASH_CLEAR_FLAG'
 #define __HAL_FLASH_CLEAR_FLAG(__FLAG__)   ((FLASH->SR) = (__FLAG__))
                                                            ^
flash.c:197:48: error: 'FLASH_FLAG_PGPERR' undeclared (first use in this function)
                            FLASH_FLAG_PGAERR | FLASH_FLAG_PGPERR | FLASH_FLAG_PGSERR);
                                                ^
../../lib/stm32lib/STM32F3xx_HAL_Driver/Inc/stm32f3xx_hal_flash.h:309:60: note: in definition of macro '__HAL_FLASH_CLEAR_FLAG'
 #define __HAL_FLASH_CLEAR_FLAG(__FLAG__)   ((FLASH->SR) = (__FLAG__))
                                                            ^
flash.c:197:68: error: 'FLASH_FLAG_PGSERR' undeclared (first use in this function)
                            FLASH_FLAG_PGAERR | FLASH_FLAG_PGPERR | FLASH_FLAG_PGSERR);
                                                                    ^
../../lib/stm32lib/STM32F3xx_HAL_Driver/Inc/stm32f3xx_hal_flash.h:309:60: note: in definition of macro '__HAL_FLASH_CLEAR_FLAG'
 #define __HAL_FLASH_CLEAR_FLAG(__FLAG__)   ((FLASH->SR) = (__FLAG__))
                                                            ^
In file included from ../../lib/stm32lib/STM32F3xx_HAL_Driver/Inc/stm32f3xx_hal_def.h:48:0,
                 from ../../lib/stm32lib/STM32F3xx_HAL_Driver/Inc/stm32f3xx_hal_rcc.h:45,
                 from boards/STM32F3DISC/stm32f3xx_hal_conf.h:187,
                 from ../../lib/stm32lib/STM32F3xx_HAL_Driver/Inc/stm32f3xx_hal.h:46,
                 from ./mpconfigboard_common.h:30,
                 from ./mpconfigport.h:32,
                 from ../../py/mpconfig.h:62,
                 from flash.c:27:
../../lib/stm32lib/STM32F3xx_HAL_Driver/Inc/Legacy/stm32_hal_legacy.h:380:39: error: 'FLASH_TYPEERASE_SECTORS' undeclared (first use in this function)
 #define TYPEERASE_SECTORS             FLASH_TYPEERASE_SECTORS
                                       ^
flash.c:201:33: note: in expansion of macro 'TYPEERASE_SECTORS'
     EraseInitStruct.TypeErase = TYPEERASE_SECTORS;
                                 ^
flash.c:202:20: error: 'FLASH_EraseInitTypeDef {aka struct <anonymous>}' has no member named 'VoltageRange'
     EraseInitStruct.VoltageRange = VOLTAGE_RANGE_3; // voltage range needs to be 2.7V to 3.6V
                    ^
In file included from ../../lib/stm32lib/STM32F3xx_HAL_Driver/Inc/stm32f3xx_hal_def.h:48:0,
                 from ../../lib/stm32lib/STM32F3xx_HAL_Driver/Inc/stm32f3xx_hal_rcc.h:45,
                 from boards/STM32F3DISC/stm32f3xx_hal_conf.h:187,
                 from ../../lib/stm32lib/STM32F3xx_HAL_Driver/Inc/stm32f3xx_hal.h:46,
                 from ./mpconfigboard_common.h:30,
                 from ./mpconfigport.h:32,
                 from ../../py/mpconfig.h:62,
                 from flash.c:27:
../../lib/stm32lib/STM32F3xx_HAL_Driver/Inc/Legacy/stm32_hal_legacy.h:406:39: error: 'FLASH_VOLTAGE_RANGE_3' undeclared (first use in this function)
 #define VOLTAGE_RANGE_3               FLASH_VOLTAGE_RANGE_3
                                       ^
flash.c:202:36: note: in expansion of macro 'VOLTAGE_RANGE_3'
     EraseInitStruct.VoltageRange = VOLTAGE_RANGE_3; // voltage range needs to be 2.7V to 3.6V
                                    ^
flash.c:206:20: error: 'FLASH_EraseInitTypeDef {aka struct <anonymous>}' has no member named 'Sector'
     EraseInitStruct.Sector = flash_get_sector_info(flash_dest, NULL, NULL);
                    ^
flash.c:207:20: error: 'FLASH_EraseInitTypeDef {aka struct <anonymous>}' has no member named 'NbSectors'
     EraseInitStruct.NbSectors = flash_get_sector_info(flash_dest + 4 * num_word32 - 1, NULL, NULL) - EraseInitStruct.Sector + 1;
                    ^
flash.c:207:117: error: 'FLASH_EraseInitTypeDef {aka struct <anonymous>}' has no member named 'Sector'
     EraseInitStruct.NbSectors = flash_get_sector_info(flash_dest + 4 * num_word32 - 1, NULL, NULL) - EraseInitStruct.Sector + 1;
                                                                                                                     ^
make: *** [build-STM32F3DISC/flash.o] Error 1
